[package]
name = "bdnsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"           # Web framework
actix-service = "2.0"       # Web framework   
mongodb = "3.1.1"             # MongoDB driver
serde = { version = "1.0.215", features = ["derive"] }  # Serialization and deserialization
serde_json = "1.0.133"          # JSON support
futures = "0.3"             # Asynchronous programming
dotenv = "0.15"             # Environment variables
tokio = { version = "1.42", features = ["full"] } 
chrono = { version = "0.4.39", features = ["serde"] }
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
rusoto_dynamodb = "0.48.0"
rusoto_core = "0.48"
rusoto_credential = "0.48"
maplit = "1.0"
neo4rs = "0.8"